--- a/homeFiles/main.css
+++ b/homeFiles/main.css
@@ -7,14 +7,15 @@
 }
 
 .home{
-	background-color: #5E5E5E;
 	font-family: BebasNeue, Helvetica;
   font-weight: bold;
   font-size: 15px;
+  height: 100vh;
 }
 
 body{
   font-family: Helvetica, 'BebasNeue';
+  background-color: #5E5E5E;
 }
 
 .container{
@@ -217,3 +218,34 @@ p{
 span{
 	color: white;
 }
+
+/* ARROW CSS */
+.arrow {
+  box-sizing: border-box;
+  height: 6vw;
+  width: 6vw;
+  border-style: solid;
+  border-color: white;
+  border-width: 0px 3px 3px 0px;
+  transform: rotate(45deg);
+  transition: border-width 150ms ease-in-out;
+}
+
+.arrow:hover {
+  border-bottom-width: 6px;
+  border-right-width: 6px;
+}
+
+.arrowcontainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 12%;
+  height: 100px;
+}
+
+#blog {
+  background: white;
+  height: 100vh;
+}
+/* ARROW CSS */
