changed name back

--- a/homeFiles/main.css
+++ b/homeFiles/main.css
@@ -220,7 +220,7 @@ span{
 }
 
 /* ARROW CSS */
-.arrow {
+/* .arrow {
   box-sizing: border-box;
   height: 6vw;
   width: 6vw;
@@ -247,5 +247,5 @@ span{
 #blog {
   background: white;
   height: 100vh;
-}
+} */
 /* ARROW CSS */
