--- a/homeFiles/main.css
+++ b/homeFiles/main.css
@@ -1,3 +1,13 @@
+/* GENERAL */
+p{
+  font-family: Helvetica, Proxima Nova;
+}
+
+body{
+  font-family: Helvetica, 'BebasNeue';
+  background-color: white;
+}
+
 @font-face {
   font-family: 'BebasNeue';
   src:  url('homeFiles/files/BebasNeue.woff2') format('woff2'),
@@ -5,22 +15,92 @@
   format('svg');
   font-weight: normal;
 }
+/* ========== */
 
+/* HOME PAGE */
 .home{
 	font-family: BebasNeue, Helvetica;
   font-weight: bold;
   font-size: 15px;
-}
-
-body{
-  font-family: Helvetica, 'BebasNeue';
   background-color: #5E5E5E;
 }
 
-.container{
-
+.name{
+  font-family: Helvetica, 'BebasNeue';
+  font-weight: bold;
+	font-size: 70;
+	text-align: center;
+	margin-top: 10%;
+	margin-bottom: 10;
 }
 
+span{
+	color: white;
+}
+/* ========== */
+
+/* ABOUT PAGE */
+.bio{
+  margin-top: 5%;
+  margin-left: 10px;
+}
+
+.about{
+	background-color: white;
+}
+
+.cutout{
+	position: fixed;
+	bottom: 0;
+	right: 0;
+	width: 45%;
+}
+/* ========== */
+
+/* PROJECTS PAGE */
+.projects{
+  margin: 20 10;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 1em;
+  text-align: center;
+}
+
+.projects > div {
+  padding: 1em;
+  background-color: #eee;
+  border-radius: 7px;
+}
+
+ul.project_details{
+  text-align: center;
+  padding-left: 0;
+  list-style: none;
+  font-family: Helvetica, Proxima Nova;
+  font-size: 16px;
+}
+
+.project_title{
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.tilePic{
+  object-fit: contain;
+  width: 60%;
+}
+/* ========== */
+
+/* CONTACT PAGE */
+.contact{
+  font-family: Helvetica, Proxima Nova;
+  margin-top: 10%;
+	text-align: center;
+  font-size: 18px;
+}
+/* ========== */
+
+/* NAVIGATION */
 .wrapper{
   display:grid;
   grid-template-columns: 1fr 9fr;
@@ -54,7 +134,6 @@ ul.nav{
 	text-decoration: underline;
 }
 
-
 ul.topnav{
   padding-left: 0;
   padding-top: 13px;
@@ -83,18 +162,40 @@ ul.topnav{
 	margin: 10px;
 	width: 100px;
 }
+/* ========== */
 
-.about{
-	background-color: white;
+/* ARROW CSS */
+/* .arrow {
+  box-sizing: border-box;
+  height: 6vw;
+  width: 6vw;
+  border-style: solid;
+  border-color: white;
+  border-width: 0px 3px 3px 0px;
+  transform: rotate(45deg);
+  transition: border-width 150ms ease-in-out;
 }
 
-.cutout{
-	position: fixed;
-	bottom: 0;
-	right: 0;
-	width: 45%;
+.arrow:hover {
+  border-bottom-width: 6px;
+  border-right-width: 6px;
 }
 
+.arrowcontainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 12%;
+  height: 100px;
+}
+
+#blog {
+  background: white;
+  height: 100vh;
+} */
+/* ARROW CSS */
+
+/* ALTERNATE ABOUT PAGE CSS */
 .one{
 	font-family: Proxima Nova;
 	position: fixed;
@@ -135,8 +236,6 @@ ul.topnav{
 	text-decoration: none;
 }
 
-
-
 .hello{
 	font-size: 60px;
 	font-family: Helvetica, Proxima Nova;
@@ -148,103 +247,5 @@ ul.topnav{
 .experience{
 	margin: auto;
 	width: 50%;
-
 }
-
-h3{
-  font-family: Proxima Nova;
-  text-align: center;
-}
-
-.name{
-  font-family: Helvetica, 'BebasNeue';
-  font-weight: bold;
-	font-size: 70;
-	text-align: center;
-	margin-top: 10%;
-	margin-bottom: 10;
-}
-
-.contact{
-  font-family: Helvetica, Proxima Nova;
-  margin-top: 10%;
-	text-align: center;
-  font-size: 18px;
-}
-
-.projects{
-  margin: 20 10;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 1em;
-  text-align: center;
-
-}
-
-.projects > div {
-  padding: 1em;
-  background-color: #eee;
-  border-radius: 7px;
-}
-
-ul.project_details{
-  text-align: center;
-  padding-left: 0;
-  list-style: none;
-  font-family: Helvetica, Proxima Nova;
-  font-size: 16px;
-}
-
-.project_title{
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.tilePic{
-  object-fit: contain;
-  width: 60%;
-}
-
-.bio{
-  margin-top: 5%;
-  margin-left: 10px;
-}
-
-p{
-  font-family: Helvetica, Proxima Nova;
-}
-
-span{
-	color: white;
-}
-
-/* ARROW CSS */
-/* .arrow {
-  box-sizing: border-box;
-  height: 6vw;
-  width: 6vw;
-  border-style: solid;
-  border-color: white;
-  border-width: 0px 3px 3px 0px;
-  transform: rotate(45deg);
-  transition: border-width 150ms ease-in-out;
-}
-
-.arrow:hover {
-  border-bottom-width: 6px;
-  border-right-width: 6px;
-}
-
-.arrowcontainer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-bottom: 12%;
-  height: 100px;
-}
-
-#blog {
-  background: white;
-  height: 100vh;
-} */
-/* ARROW CSS */
+/* ========== */
