finished photo gallery

--- a/homeFiles/files/laurensteimle/style.css
+++ b/homeFiles/files/laurensteimle/style.css
@@ -462,7 +462,6 @@ li.dot{
     resize: none;
 }
 
-
 input::placeholder, textarea::placeholder {
     color: #8f8f8f;
     font-size: 15px;
@@ -471,9 +470,37 @@ input::placeholder, textarea::placeholder {
     overflow: hidden;
   }
 
+/* PHOTO GALLERY */
+.photo-wrapper{
+    z-index: 1;
+    position: absolute;
+    top: 15%;
+    left: 20%;
+    width: 80%;
+    height: 100vh;
+    max-width: 1170px;
+}
+
+.gallery{
+    margin: 10px 50px;
+}
+
+.gallery img{
+    transition: 1s;
+    padding: 15px;
+    width: 250px;
+}
+
+.gallery img:hover{
+    filter: grayscale(100%);
+    transform: scale(1.1);
+}
+
+
+
 @media(max-width:768px){
     body{
-        /* background-color: red; */
+        background-color: white;
     }
 
 }
