--- a/homeFiles/files/laurensteimle/style.css
+++ b/homeFiles/files/laurensteimle/style.css
@@ -378,7 +378,7 @@ ul.nav li{
     padding-top: 8%;
 }
 
-img{
+#branding img{
     width: 80%;
     max-width: 215px;
 }
@@ -496,11 +496,163 @@ input::placeholder, textarea::placeholder {
     transform: scale(1.1);
 }
 
+/* ABOUT */
+
+.about-wrapper{
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    left: 20%;
+    width: 80%;
+    height: 100vh;
+}
+
+.left-about{
+    width: 40%;
+    padding-left: 12%;
+    padding-right: 3%;
+    float: left;
+    vertical-align: baseline;
+    margin: auto;
+}
+
+.left-about h1{
+    text-transform: uppercase;
+    color: #b24837;
+    font-family: Arial, Helvetica, sans-serif;
+    -webkit-animation: fadein 4s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 4s; /* Firefox < 16 */
+        -ms-animation: fadein 4s; /* Internet Explorer */
+         -o-animation: fadein 4s; /* Opera < 12.1 */
+            animation: fadein 4s;
+}
+
+@keyframes fadein{
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+.left-about h2{
+    -webkit-animation: 4s ease-in-out 0s normal forwards 1 fadein2;
+    animation: 4s ease-in-out 0s normal forwards 1 fadein2; /* (duration) (timing-function) (animation-delay) (direction) (animation iteration count)*/
+}
+
+@keyframes fadein2 {
+    0% { opacity:0; }
+    40% { opacity:0; }
+    100% { opacity:1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein2 {
+    0% { opacity:0; }
+    40% { opacity:0; }
+    100% { opacity:1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein2 {
+    0% { opacity:0; }
+    40% { opacity:0; }
+    100% { opacity:1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein2 {
+    0% { opacity:0; }
+    40% { opacity:0; }
+    100% { opacity:1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein2 {
+    0% { opacity:0; }
+    40% { opacity:0; }
+    100% { opacity:1; }
+}
+
+.right-about{
+    width: 60%;
+    float: right;
+    position: relative;
+}
+
+.right-about img{
+    width: 100%;
+}
+
+.left-about p{
+    font-size: 14px;
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+.left-about .small-paragraph{
+    font-size: 12px;
+}
+
+.mobile-logo{
+    display: none;
+}
+
 
 
 @media(max-width:768px){
-    body{
-        background-color: white;
+
+    .home-body{
+        background: #CD9B2B;
+    }
+
+    .video-wrapper video{
+        display: none;
+    }
+
+    nav, .panel-contact{
+        display: none;
+    }
+
+    #branding img{
+        display: none;
+    }
+
+    .mobile-logo{
+        display: block;
+        width: 75%;
+        padding-top: 50%;
+    }
+
+    .left-panel{
+        background: #CD9B2B;
+    }
+
+    /* for testing purposes only */
+    nav{
+        display: block;
+        background: #CD9B2B;
     }
 
 }
