--- a/homeFiles/files/laurensteimle/media/Lauren Steimle _ projects_files/style.css
+++ b/homeFiles/files/laurensteimle/media/Lauren Steimle _ projects_files/style.css
@@ -115,13 +115,12 @@ li.dot{
     z-index: 1;
     position: absolute;
     top: 0;
-    left: 22%;
-    width: 78%;
+    left: 20%;
+    width: 80%;
     height: 100vh;
 }
 
 .projects{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     width: 100%;
     padding-left: 9%;
     padding-right: 5%;
@@ -138,6 +137,7 @@ li.dot{
 .left-column{
     width: 39%;
     float: left;
+    vertical-align: baseline;
     margin: auto;
 }
 
@@ -183,6 +183,8 @@ li.dot{
     background-position: center;
     background-repeat: no-repeat;
 }
+
+
 
 .slide-content{
     display: flex;
@@ -321,7 +323,7 @@ input::placeholder, textarea::placeholder {
 .about-wrapper{
     z-index: 1;
     position: absolute;
-    top: 100px;
+    top: 0;
     left: 20%;
     width: 80%;
     height: 100vh;
@@ -433,10 +435,6 @@ input::placeholder, textarea::placeholder {
 
 .left-about .small-paragraph{
     font-size: 12px;
-}
-
-.about-img{
-    display: none;
 }
 
 /* HIDDEN FOR MOBILE */
@@ -554,13 +552,11 @@ label{
     .projects{
         display: block;
         margin: none;
-        padding-left: 0%;
-        padding-right: 0%;
     }
 
     .left-column{
         float: none;
-        width: 85%
+        padding-left: 0;
     }
 
     .right-column{
@@ -585,17 +581,7 @@ label{
     }
 
     .left-about{
-        width: 90%;
-    }
-
-    .right-about img{
-        display: none;
-        width: 0;
-    }
-
-    .about-img{
-        display: block;
-        width: 100%;
+        padding-left: 10px;
     }
 
     /* CONTACT */
